# liberpong

./: CMakeLists.txt  CMakePresets.json  README.md  project.4coder
assets/shaders/: basic.frag  basic.vert  basic_circle.frag  basic_circle.vert
binaries/assets/shaders/: basic.frag  basic.vert
src/: IDKMath.h  ball.cpp  ball.h  entrypoint.cpp  game_object.cpp  game_object.h  gl.cpp  gl.h  main.cpp  paddel.cpp  paddel.h  pong.h  shader.cpp  shader.h
src/platform/: platform.h  platform_linux.cpp  platform_win32.cpp  resources.rc
